mobile overflow fixed

--- a/source/sass/blocks/dealers.scss
+++ b/source/sass/blocks/dealers.scss
@@ -12,7 +12,6 @@
   margin: 0 auto;
   padding: 33px 0 22px;
   padding-right: 10px;
-  width: 320px;
 
   @media (min-width: $tablet-width) {
     justify-content: space-between;
