--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -136,12 +136,11 @@
 }
 
 .example__img-wrapper {
-  width: 708px;
-  height: auto;
-  display: flex;
-
   @media (min-width: $tablet-width) {
+    display: flex;
     margin-left: 10px;
+    width: 708px;
+    height: auto;
   }
 
   @media (min-width: $desktop-width) {
@@ -177,18 +176,20 @@
   }
 
   &:first-child > .example__demo-img {
-    padding-left: 4px;
+    @media (min-width: $tablet-width) {
+      padding-left: 4px;
+    }
   }
 }
 
 .example__demo-img {
   position: relative;
-  left: -20px;
   margin-bottom: 26px;
-  width: 320px;
+  width: 280px;
   height: 240px;
 
   @media (min-width: $tablet-width) {
+    left: -20px;
     margin-bottom: -30px;
     width: 708px;
     height: 517px;
