--- a/source/sass/blocks/progress-slider.scss
+++ b/source/sass/blocks/progress-slider.scss
@@ -156,7 +156,7 @@
   border-bottom: 1px dashed $slider-button;
   font-family: $font-oswald;
   font-size: 16px;
-  line-height: 20;
+  line-height: 20px;
   text-transform: uppercase;
   background-color: $example-bg;
 
