--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -27,9 +27,9 @@
       height: 696px;
       background-image: url("../../img/index-background-desktop@1x.jpg");
       background-color: #65a93c;
-      background-size: cover;
+      background-size: contain;
       background-repeat: no-repeat;
-      background-position: right center;
+      background-position: 50px center;
 
       @media (min-resolution: 2dppx) {
         background-image: url("../../img/index-background-desktop@2x.jpg");
